# masterzdran-azure-tablestorge-logging

./: .pylintrc  CHANGELOG.md  README.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: main.yml
src/masterzdran_azure_tablestorage_logging/: __init__.py  interfaces.py  logger.py  models.py  storage.py
tests/: test_azure_logger.py
