[project]
name = "masterzdran-azure-tablestorge-logging"
version = "1.0.0"
authors = [
  { name="Nuno Cancelo", email="nuno.cancelo@gmail.com" },
]
description = "A professional logging module using Azure Table Storage"
readme = "README.md"
requires-python = ">=3.8"
classifiers=[
        "Development Status :: 3 - Alpha",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
    ],
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/masterzdran/masterzdran-azure-tablestorge-logging"
Issues = "https://github.com/masterzdran/masterzdran-azure-tablestorge-logging/issues"